Now with non empty files

--- a/public/contact.html
+++ b/public/contact.html
@@ -1,9 +1,19 @@
 <h1>Contact Me</h1>
-<p>Tel: +123456789</p>
-<p>Email: me@gmail.com</p>
+<p>Tel: +1 3078056109</p>
+<p>Email: JohnDoe@gmail.com</p>
 <p>Address:</p>
 <p>
-  123 North Street<br />
-  Some City<br />
-  Some Country <br />
+Street:  492 Creekside Lane <br>
+
+City:  Montrose <br>
+
+State/province/area:   Illinois <br>
+
+Phone number:  805-645-4642 <br>
+
+Zip code:  62445 <br>
+ 
+Country calling code:  +1 <br>
+
+Country:  United States <br>
 </p>
