--- a/index.html
+++ b/index.html
@@ -1,5 +1,23 @@
 <!-- TODO 1: Create the HTML Boilerplate -->
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Nir's Portfolio</title>
+</head>
+<body>
+<h1>John Doe's Portfolio</h1>
+<h2>I'm a full stack developer</h2>
+<hr>
+<a href="public/movie-ranking.html"><h3>Movie Ranking Project</h3></a>
+<img src="assets/images/MoviesScreenShot.png" alt="Movies Website Photo" height="200" >
+<a href="public/birthday-invite.html"><h3>Birthday Invite Project</h3></a>
+<img src="assets/images/birthday-invite.png" alt="Birthday Invite Photo" height="200" >
+<hr>
+<a href="public/about.html">About Me</a> <a href="public/contact.html">Contact me</a>
+</body>
+</html>
 <!-- TODO 2: Add Your previous projects' HTML into the public folder -->
 
 <!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
